kubernetes/catalog/redis/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/redis.xml
# Category: Tools-Utilities
# Stars: 0 | Downloads: 862154
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: redis
          image: bitnamisecure/redis:latest
          ports:
            - containerPort: 6379
              protocol: TCP
              name: redis-port
          startupProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 6379
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 6379
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: redis-data-0
              mountPath: "/bitnami/redis"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: redis-data-0
        persistentVolumeClaim:
          claimName: redis-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis
  labels:
    app.kubernetes.io/name: redis
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis-port
  type: ClusterIP
