kubernetes/catalog/redis/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redis
  namespace: redis
  labels:
    app.kubernetes.io/name: redis
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redis.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: redis
          port: 6379
  tls:
    secretName: int-rlservers-com-tls
